--- a/pages/home_center/common_panel/index.wxss
+++ b/pages/home_center/common_panel/index.wxss
@@ -2,11 +2,11 @@
 
 .common-panel-backgroud {
   position: absolute;
-  top: 0;
+  top: 30px;
   left: 0;
   width: 100%;
-	height: 320px;
-	background-color: #27c3d9;
+	height: 360px;
+	background-color: #ceffbc;
 }
 
 .common-panel-header {
@@ -20,7 +20,7 @@
 
 .common-panel-header-block {
   display: flex;
-  flex-direction: column;
+  flex-direction: unset;
   align-items: center;
 }
 
@@ -45,7 +45,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   text-align: center;
-	font-size: 74px;
+	font-size: 50px;
 	color: #fff;
 }
 
@@ -53,7 +53,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 54px;
+  height: 20.54px;
   padding: 16px 2px;
 }
 
@@ -109,7 +109,7 @@
 }
 
 .statuslist {
-  padding-top: 16px;
+  padding-top: 46px;
   display: flex;
   justify-content: center;
   line-height: 12px;
@@ -120,4 +120,10 @@
   padding: 16px 8px;
   width: auto;
   height: 100%;
+}
+.progress-bar{
+  border: solid 20px #fff;
+
+  border-radius: 8rpx !important;
+  background: rgb(221, 237, 247);  
 }
